--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -242,7 +242,7 @@ Mark:
     status: current
     name: 周詳
     name_en: 'Sean Chou'
-    avatar: 'https://i.imgur.com/OGr3YPL.jpg'
+    avatar: 'https://i.imgur.com/hMk7L2c.jpeg'
 ########## RAY ##########
 chiachichang:
     avatar: 'https://talk.pdis.nat.gov.tw/letter_avatar_proxy/v2/letter/c/ce73a5/800.png'
