--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,86 +3,75 @@
     status: current
     name: 唐鳳
     name_en: Audrey Tang
-    description: 數位政務委員，業務為社會創新、青年參與、開放政府。
+    description: 行政院資訊長，數位部長，資安院董事長。
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/audreyt/800/574_1.png'
-    wiselike: 'https://wiselike.tw/#/user/audreyt'
-    email: audreyt@audreyt.org
+    email: au@pdis.nat.gov.tw
     twitter: https://twitter.com/audreyt
     facebook: https://facebook.com/digitalminister.tw
     instagram: https://www.instagram.com/digitalminister
+########## 2023 ##########
+
+########## 2022 ##########
 葉寧:
-    wiselike: 'https://wiselike.tw/#/user/ningyeh'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/ningyeh/800/676_1.png'
-    status: current
+    status: former
     name: 葉寧
     name_en: Ning Yeh
 黃子維:
-    wiselike: 'https://wiselike.tw/#/user/zach'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png'
-    status: current
+    status: former
     name: 黃子維
     name_en: Zach Huang
 薛雅婷:
-    wiselike: 'https://wiselike.tw/#/user/Wendy'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/wendy/800/638_1.png'
-    status: current
+    status: former
     name: 薛雅婷
     name_en: Wendy Hsueh
 展銘:
     description: 我不是長頸鹿  我不是長頸鹿   我不是長頸鹿
-    wiselike: 'https://wiselike.tw/#/user/targee'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/targee/800/588_1.png'
-    status: current
+    status: former
     name: "☕️展銘🐘"
     name_en: targee
 蕭郁溏:
-    wiselike: 'https://wiselike.tw/#/user/AvrossHsiao'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/avrosshsiao/800/577_1.png'
-    status: current
+    status: former
     name: 蕭郁溏
 魏守斌:
-    wiselike: 'https://wiselike.tw/#/user/Bobby'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bobby/800/4074_1.png'
-    status: current
+    status: former
     name: 魏守斌
     name_en: Shou-Bin Wei
 李雪津:
-    wiselike: 'https://wiselike.tw/#/user/cherjean'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/cherjean/800/592_1.png'
     status: former
     name: 李雪津
 李姿瑩:
-    wiselike: 'https://wiselike.tw/#/user/chihyingli'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chihyingli/800/609_1.png'
     status: former
     name: 李姿瑩
 賴致翔:
     description: 浪漫派公務員但是做著很實際的工作
-    wiselike: 'https://wiselike.tw/#/user/chlai'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chlai/800/576_1.png'
-    status: current
+    status: former
     name: 賴致翔
     name_en: Smart Lai
 陳怡君:
-    wiselike: 'https://wiselike.tw/#/user/chun'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chun/800/729_1.png'
-    status: current
+    status: former
     name: 陳怡君
     name_en: Yi-Chun Chen
 陳彥佑:
-    wiselike: 'https://wiselike.tw/#/user/CYY'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/cyy/800/578_1.png'
     status: former
     name: 陳彥佑
 貢丸:
-    wiselike: 'https://wiselike.tw/#/user/dychien'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/dychien/800/555_1.png'
-    status: current
+    status: former
     name: 貢丸
     name_en: D.Y. Chien
 蔡仲明:
     description: 資策會派來的台灣社會數位化打手 ._.
-    wiselike: 'https://wiselike.tw/#/user/romulus'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/romulus/800/585_1.png'
     status: former
     name: 蔡仲明
@@ -96,86 +85,72 @@
     name: 李建平
 林書漾:
     description: 在公共數位創新空間小組進行一個設計的動作
-    wiselike: 'https://wiselike.tw/#/user/shuyanglin'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shuyanglin/800/605_1.png'
-    status: current
+    status: former
     name: 林書漾
     name_en: Shu-Yang Lin
 周紹文:
     description: 行政院 公共數位創新小組 替代役
-    wiselike: 'https://wiselike.tw/#/user/john5601'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/john5601/800/580_1.png'
     status: former
     name: 周紹文
 林正東:
-    description: 行政院 公共數位創新小組 (PDIS) / wiselike 貢獻者
-    wiselike: 'https://wiselike.tw/#/user/smith02620'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/smith02620/800/587_1.png'
     status: former
     name: 林正東
 Mark:
     description: 好熱！好熱！
-    wiselike: 'https://wiselike.tw/#/user/markdai'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/markdai/800/582_1.png'
     status: former
     name: Mark
 簡就可:
-    status: current
+    status: former
     name: 簡就可
     name_en: Joke
     description: 影像顧問、前端工程師
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/jokeum/800/581_1.png'
-    wiselike: 'https://wiselike.tw/#/user/jokeum'
     email: joke@pdis.tw
     facebook: https://facebook.com/jokeum
     twitter: https://twitter.com/jokeum
     instagram: https://www.instagram.com/joke.um/
 張庭瑜:
     description: 感恩PDIS，讚嘆PDIS
-    wiselike: 'https://wiselike.tw/#/user/Naxus'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/naxus/800/583_1.png'
-    status: current
+    status: former
     name: 張庭瑜
     name_en: Naxus Chang
 陳牧:
-    wiselike: 'https://wiselike.tw/#/user/MuChen'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/muchen/800/590_1.png'
     status: former
     name: 陳牧
 張芳睿:
-    wiselike: 'https://wiselike.tw/#/user/fang'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/fang/800/579_1.png'
-    status: current
+    status: former
     name: 張芳睿
     name_en: Fang-Jui Chang
 彭筱婷:
-    wiselike: 'https://wiselike.tw/#/user/stpeng'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/stpeng/800/659_1.png'
-    status: current
+    status: former
     name: 彭筱婷
     name_en: Sheau-Tyng Peng
 雨蒼:
     description: 自由軟體工作者、公民記者
-    wiselike: 'https://wiselike.tw/#/user/billy3321'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/billy3321/800/727_1.png'
     status: former
     name: 雨蒼
 李忠和:
     description: Software Engineer in Backend and Data
-    wiselike: 'https://wiselike.tw/#/user/peterlee'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/800/727_1.png'
-    status: current
+    status: former
     name: 李忠和
     name_en: CHUNG-HO LEE
 許舜博:
-    wiselike: 'https://wiselike.tw/#/user/shbhsu'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shbhsu/800/686_1.png'
     status: former
     name: 許舜博
 張皓婷:
-    wiselike: 'https://wiselike.tw/#/user/haoting'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/haoting/800/10766_2.png'
-    status: current
+    status: former
     name: 張皓婷
     name_en: Haoting Chang
 莊秉倫:
@@ -185,13 +160,11 @@ Mark:
     name: 莊秉倫
     name_en: Bing-Lun Zhuang
 詹壹雯:
-    wiselike: 'https://wiselike.tw/#/user/315yiwenchan'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/800/11225_2.png'
-    status: current
+    status: former
     name: 詹壹雯
     name_en: Yi-Wen Chan
 彭美琪:
-    wiselike: 'https://wiselike.tw/#/user/mcpeng'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/mcpeng/800/11226_2.png'
     name: 彭美琪
     name_en: Mickey Peng
@@ -199,19 +172,17 @@ Mark:
 蔡君蘋:
     name: 蔡君蘋
     name_en: Apple Tsai
-    status: current
+    status: former
 蔡琬梅:
     avatar: 'https://graph.facebook.com/699755368/picture?type=large'
     status: former
     name: 蔡琬梅
 王少芸:
-    wiselike: 'https://wiselike.tw/#/user/smalying'
     avatar: 'https://i.imgur.com/6otLPNO.jpg'
     status: former
     name: 王少芸
     name_en: Selina Wang
 蔡玉琪:
-    wiselike: 'https://wiselike.tw/#/user/yuchitsai'
     avatar: 'https://i.imgur.com/1WCNW9J.jpg'
     status: former
     name: 蔡玉琪
@@ -228,18 +199,18 @@ Mark:
     name_en: Frances Feng
 孫蕙英:
     avatar: 'https://i.imgur.com/Xmn3wiE.png'
-    status: current
+    status: former
     name: 孫蕙英
     name_en: Vivian Sun
 許恩恩:
     description: 社會運動研究。公民審議。主持溝通技巧。
     avatar: 'https://i.imgur.com/2grxLFV.jpg'
-    status: current
+    status: former
     name: 許恩恩
     name_en: Ann Hsu
     facebook: https://www.facebook.com/enenkoyako/
 周詳:
-    status: current
+    status: former
     name: 周詳
     name_en: 'Sean Chou'
     avatar: 'https://i.imgur.com/hMk7L2c.jpeg'
