ignore vendor to fix build error

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -81,6 +81,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: "recursive"
+          ref: ${{ github.ref }}
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
