--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -41,8 +41,8 @@ jobs:
     env:
       DEPLOY_USER_NAME: Deploy-GitHub-Action
       DEPLOY_USER_EMAIL: github_action@pdis.tw
-      ENCRYPT_KEY: ${{ secrets.ENCRYPTED_2FB15357D122_KEY }}
-      ENCRYPT_IV: ${{ secrets.ENCRYPTED_2FB15357D122_IV }}
+      ENCRYPT_KEY: ${{ secrets.ENCRYPTED_KEY }}
+      ENCRYPT_IV: ${{ secrets.ENCRYPTED_IV }}
       GOOGLE_APPLICATION_CREDENTIALS: ./.github/actions/auto-translation/GCP.json
     steps:
       - uses: actions/checkout@v3
