--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -50,7 +50,9 @@ jobs:
           ref: ${{ github.ref }}
       - name: Decode Google Cloud transation API Key
         run: |
-          openssl aes-256-cbc -nosalt -base64 -p -K $ENCRYPT_KEY -iv $ENCRYPT_IV -in GCP.json.enc -out $GOOGLE_APPLICATION_CREDENTIALS -d
+          openssl version
+          openssl enc -d -aes-256-cbc -pass $ENCRYPT_KEY -md sha256 -in GCP.json.enc -out $GOOGLE_APPLICATION_CREDENTIALS
+      #    openssl aes-256-cbc -nosalt -base64 -p -K $ENCRYPT_KEY -iv $ENCRYPT_IV -in GCP.json.enc -out $GOOGLE_APPLICATION_CREDENTIALS -d
       # - uses: actions/setup-node@v3
       #   with:
       #     node-version: "16"
