--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -41,18 +41,18 @@ jobs:
     env:
       DEPLOY_USER_NAME: Deploy-GitHub-Action
       DEPLOY_USER_EMAIL: github_action@pdis.tw
-      ENCRYPT_KEY: ${{ secrets.ENCRYPTED_KEY }}
-      ENCRYPT_IV: ${{ secrets.ENCRYPTED_IV }}
-      GOOGLE_APPLICATION_CREDENTIALS: ./.github/actions/auto-translation/GCP.json
+      # ENCRYPT_KEY: ${{ secrets.ENCRYPTED_KEY }}
+      # ENCRYPT_IV: ${{ secrets.ENCRYPTED_IV }}
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.ENCRYPTED_KEY }}
+      # GOOGLE_APPLICATION_CREDENTIALS: ./.github/actions/auto-translation/GCP.json
     steps:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
-      - name: Decode Google Cloud transation API Key
-        run: |
-          openssl version
-          openssl enc -d -aes-256-cbc -pass $ENCRYPT_KEY -md sha256 -in GCP.json.enc -out $GOOGLE_APPLICATION_CREDENTIALS
-      #    openssl aes-256-cbc -nosalt -base64 -p -K $ENCRYPT_KEY -iv $ENCRYPT_IV -in GCP.json.enc -out $GOOGLE_APPLICATION_CREDENTIALS -d
+      # - name: Decode Google Cloud transation API Key
+      #   run: |
+      #     openssl version
+      #     openssl aes-256-cbc -nosalt -base64 -p -K $ENCRYPT_KEY -iv $ENCRYPT_IV -in GCP.json.enc -out $GOOGLE_APPLICATION_CREDENTIALS -d
       # - uses: actions/setup-node@v3
       #   with:
       #     node-version: "16"
