--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,6 +19,17 @@
     email: bluet@pdis.nat.gov.tw
     twitter: https://twitter.com/BlueT
     facebook: https://www.facebook.com/BlueT.M.Lien
+江明宗:
+    status: current
+    name: 江明宗
+    description: somebody as a nobody, nobody as a somebody
+    name_en: Finjon Kinag (kiang)
+    description: Head of Application Architecture 應用架構總顧問
+    avatar: 'https://pdis.nat.gov.tw/assets/avatar/kiang.jpg'
+    email: kiang@pdis.nat.gov.tw
+    twitter: https://twitter.com/finjonkiang
+    facebook: https://facebook.com/k.olc.tw
+    instagram: https://www.instagram.com/finjon_kiang/
 
 
 ########## 2022 ##########
