fix duplicated description

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,9 +22,8 @@
 江明宗:
     status: current
     name: 江明宗
-    description: somebody as a nobody, nobody as a somebody
     name_en: Finjon Kinag (kiang)
-    description: Head of Application Architecture 應用架構總顧問
+    description: Head of Application Architecture 應用架構總顧問 / somebody as a nobody, nobody as a somebody
     avatar: 'https://pdis.nat.gov.tw/assets/avatar/kiang.jpg'
     email: kiang@pdis.nat.gov.tw
     twitter: https://twitter.com/finjonkiang
