--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -29,6 +29,14 @@
     twitter: https://twitter.com/finjonkiang
     facebook: https://facebook.com/k.olc.tw
     instagram: https://www.instagram.com/finjon_kiang/
+林克寰:
+    status: current
+    name: 林克寰
+    name_en: Jedi Lin
+    description: Head of Accessibility Design 無障礙設計總顧問
+    avatar: 'https://pdis.nat.gov.tw/assets/avatar/jedi.png'
+    email: jedi@pdis.nat.gov.tw
+    twitter: https://twitter.com/JediLin
 
 
 ########## 2022 ##########
