Add to Audrey's en description

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@
     name: 唐鳳
     name_en: Audrey Tang
     description: 行政院資訊長，數位部長，資安院董事長。
-    description_en: Minister of Digital Affairs, Chair of NICS.
+    description_en: Chief Information Officer, Executive Yuan. Minister of Digital Affairs. Chair of National Institute of Cyber Security.
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/audreyt/800/574_1.png'
     email: au@pdis.nat.gov.tw
     twitter: https://twitter.com/audreyt
