--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -41,6 +41,9 @@
     avatar: 'https://pdis.nat.gov.tw/assets/avatar/jedi.png'
     email: jedi@pdis.nat.gov.tw
     twitter: https://twitter.com/JediLin
+    website: https://jedi.org/blog/
+    mastodon: https://g0v.social/@jedi
+    linkedin: https://tw.linkedin.com/in/jedilin/
 邱慕安:
     status: current
     name: 邱慕安
