--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,6 +21,8 @@
     email: bluet@pdis.nat.gov.tw
     twitter: https://twitter.com/BlueT
     facebook: https://www.facebook.com/BlueT.M.Lien
+    linkedin: https://www.linkedin.com/in/bluet/
+    mastodon: https://g0v.social/@bluet
 江明宗:
     status: current
     name: 江明宗
