add bluet avatar

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,7 +17,7 @@
     name_en: Matthew Lien (BlueT)
     description: 韌性架構總顧問
     description_en: Head of Resilient Architecture
-    avatar: 'https://en.gravatar.com/userimage/3207161/597aecfb201a166859e45893e2b32f20.png'
+    avatar: 'https://pdis.nat.gov.tw/assets/avatar/bluet.jpg'
     email: bluet@pdis.nat.gov.tw
     twitter: https://twitter.com/BlueT
     facebook: https://www.facebook.com/BlueT.M.Lien
