--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -30,10 +30,12 @@
     description: 應用架構總顧問
     description_en: Head of Application Architecture / somebody as a nobody, nobody as a somebody
     avatar: 'https://pdis.nat.gov.tw/assets/avatar/kiang.jpg'
+    website: https://kiang.github.io/
     email: kiang@pdis.nat.gov.tw
     twitter: https://twitter.com/finjonkiang
     facebook: https://facebook.com/k.olc.tw
     instagram: https://www.instagram.com/finjon_kiang/
+    linkedin: https://tw.linkedin.com/in/finjonkiang/
 林克寰:
     status: current
     name: 林克寰
