* restore img from fc

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -236,7 +236,7 @@ Mark:
     name_en: Apple Tsai
     status: former
 蔡琬梅:
-    avatar: 'https://graph.facebook.com/699755368/picture?type=large'
+    avatar: 'https://i.imgur.com/ivrhRaN.jpeg'
     status: former
     name: 蔡琬梅
 王少芸:
