--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -46,8 +46,10 @@
     email: jedi@pdis.nat.gov.tw
     twitter: https://twitter.com/JediLin
     website: https://jedi.org/blog/
+    website_card: https://jedi.org/pdis/
     mastodon: https://g0v.social/@jedi
     linkedin: https://tw.linkedin.com/in/jedilin/
+    phone_card: 0975-774-779
 邱慕安:
     status: current
     name: 邱慕安
