* 2023-12-21-「超智慧對齊」能打造更安全-AI？.md

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -354,6 +354,10 @@ yunhuichen:
     name: 周宜蔓
     name_en: 'Gisele Chou'
     avatar: '/assets/avatar/gisele.jpg'
+江殷年:
+    name: 江殷年
+    name_en: 'Vanessa Chiang'
+    avatar: '/assets/avatar/vanessa.jpg'
 'E. Glen Weyl':
     name: 'E. Glen Weyl'
     name_en: 'E. Glen Weyl'
