2024-02-22-窩心-該翻成焦慮還是貼心.md

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -358,6 +358,10 @@ yunhuichen:
     name: 江殷年
     name_en: 'Vanessa Chiang'
     avatar: '/assets/avatar/vanessa.jpg'
+陳書榕:
+    name: 陳書榕
+    name_en: 'Michelle Chen'
+    avatar: '/assets/avatar/michelle.jpg'
 'E. Glen Weyl':
     name: 'E. Glen Weyl'
     name_en: 'E. Glen Weyl'
