--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -362,6 +362,10 @@ yunhuichen:
     name: 陳書榕
     name_en: 'Michelle Chen'
     avatar: '/assets/avatar/michelle.jpg'
+方歆婷:
+    name: 方歆婷
+    name_en: 'Hsin-Ting Fang'
+    avatar: '/assets/avatar/hsinting.jpg'
 'E. Glen Weyl':
     name: 'E. Glen Weyl'
     name_en: 'E. Glen Weyl'
