--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -42,7 +42,7 @@
     name_en: Jedi Lin
     description: 無障礙設計總顧問
     description_en: Head of Accessibility Design
-    avatar: '/assets/avatar/jedi.png'
+    avatar: '/assets/avatar/jedi.webp'
     email: jedi@pdis.nat.gov.tw
     twitter: https://twitter.com/JediLin
     website: https://jedi.org/blog/
@@ -365,7 +365,7 @@ yunhuichen:
 方歆婷:
     name: 方歆婷
     name_en: 'Hsin-Ting Fang'
-    avatar: '/assets/avatar/hsinting.jpg'
+    avatar: '/assets/avatar/hsinting.webp'
 'E. Glen Weyl':
     name: 'E. Glen Weyl'
     name_en: 'E. Glen Weyl'
