Update URL of personas tool

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -66,7 +66,7 @@ tools:
     - image: /assets/imgs/d0861fa78a4c3cc0afaa02c510c11d5d6d46e68f.png
       title: Persona
       content: Personas are personal images of fictional realities that describe a particular group of subjects. By drawing the behaviors, actions, and preferences of this character and similar people into "personal characters," you can understand the group with this persona. The character of the character is displayed in the way of establishing a character, and the character of the character is not lost. \n Such role-playing helps ensure that work is always focused on the user, not an abstract description of their respective groups.
-      link: http://diytoolkit.org/tools/personas-2/
+      link: https://diy-toolkit.org/tools/personas/
     - image: /assets/imgs/3ac47f8f3a63361a1664d066aa7b38d7a9ffb244_2_1380x974.png
       title: User Journey
       content: User Journeys is the process of showing how people interact with services step by step. Through the user experience journey, the work team can identify problem points in the service process to confirm which parts of the new ideas can be improved.
